2005-03-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSWorkspace.m: update NSTask header
	* Source/NSPasteboard.m: ditto
	* Source/GSTheme.m: Rewrite method replacement code to use new runtime
	API... turns out to be rather simpler than using the old API.
	Add safety measure for themes which load non-standard images.

2010-03-04 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/AppKit.h,
	* Headers/AppKit/NSAlert.h,
	* Headers/AppKit/NSActionCell.h,
	* Headers/AppKit/NSCell.h,
	* Source/NSAlert.m,
	* Source/NSAffineTransform.m,
	* Source/NSCell.m: Clean up includes.
	* Source/NSActionCell.m: Add method integerValue.

2010-02-27 23:32-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/Additions/GNUstepGUI/GSTheme.h: Add category to allow
	overriding of classes used for save/open panels.
	* Source/GNUmakefile: Build new category.
	* Source/GSThemeOpenSavePanels.m: Implementation of methods
	-savePanelClass and -openPanelClass.
	* Source/NSOpenPanel.m: Modifications to use class from current 
	theme.
	* Source/NSSavePanel.m: Modifications to use class from current 
	theme.

2010-02-26  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Tools/GSspell.m (-createBundleAtPath:languages:,
	-removeBundleAtPath:, -synchronizeLanguages, main): Maintain a
	small bundle in the user's Services directory to automatically
	vend the supported languages besides AmericanEnglish.

2010-02-26 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSServicesManager.m: NSUpdateDynamicServices() ask workspace
	to rebuild cache of application information so the update from cache is
	actually loading the latest data.
	* Source/NSLayoutManager.m: Fix for insertion point of empty document.
	Not sure this is ever needed in normal use.

2010-02-25 22:37-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSClipView.m: Correction for crash.

2010-02-25 Riccardo Mottola <rmottola@users.sf.net>

	* Source/NSDrawer.m: removed c99-isms
	* Source/GSTitleView.m: removed c99-isms